--- a/package.json
+++ b/package.json
@@ -1,33 +1,21 @@
 {
-  "name": "animated-blocks-cgb-guten-block",
-  "version": "1.0.0",
-  "private": true,
-  "scripts": {
-    "start": "cgb-scripts start",
-    "build": "cgb-scripts build",
-    "eject": "cgb-scripts eject"
-  },
-  "dependencies": {
-    "@wordpress/core-data": "^4.0.6",
-    "@wordpress/icons": "^6.1.1",
-    "babel-preset-es2015": "^6.24.1",
-    "cgb-scripts": "1.23.1",
-    "classnames": "^2.3.1",
-    "dompurify": "^2.3.4",
-    "gutenberg-react-select-styles": "0.0.2",
-    "prop-types": "^15.7.2",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-lazyload": "^3.2.0",
-    "react-select": "^5.2.2",
-    "react-select-2": "^2.0.11"
-  },
-  "devDependencies": {
-    "eslint": "^7.32.0"
-  },
-  "eslintConfig": {
-    "parserOptions": {
-      "ecmaVersion": 2020
-    }
-  }
+	"name": "gutenberg-animated-blocks",
+	"version": "1.0.1",
+	"description": "A WordPress plugin for adding scroll based animations blocks.",
+	"license": "GPL-2.0-or-later",
+	"scripts": {
+		"build": "wp-scripts build",
+		"format": "wp-scripts format",
+		"lint:css": "wp-scripts lint-style",
+		"lint:js": "wp-scripts lint-js",
+		"packages-update": "wp-scripts packages-update",
+		"plugin-zip": "wp-scripts plugin-zip",
+		"start": "wp-scripts start"
+	},
+	"devDependencies": {
+		"@wordpress/scripts": "^26.19.0"
+	},
+	"dependencies": {
+		"classnames": "^2.3.2"
+	}
 }
